added title and bg

--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kerouat's Portfolio</title>
+
+    <link rel="stylesheet" , href="styles.css" , type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-    <h1> Hi there</h1>
+    <div class="container">
+        <div class="stack" style="--stacks: 3;">
+            <span style="--index: 0;">Ahmed Kerouat</span>
+            <span style="--index: 1;">Ahmed Kerouat</span>
+            <span style="--index: 2;">Ahmed Kerouat</span>
+        </div>
+
+    </div>
+
+
+
 </body>
 
 </html>
