updated the "about me"

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,6 +34,46 @@
         <a href="index.html">Contact</a>
       </li>
     </ul>
-    <h2 id="aboutme">About me :</h2>
+    <section>
+      <div class="text">
+        <h1 id="aboutme_">About me :</h1>
+        <h3 id="aboutme">As an artist :</h3>
+        <p>
+          Lorem ipsum dolor sit amet. At quasi dolorem ut obcaecati alias hic
+          vitae tempora et reiciendis expedita et molestias nisi ut consequatur
+          quisquam. Eos dolor maiores ea rerum sint ea accusamus maxime sed
+          corrupti voluptas ad debitis eius ut repudiandae consequatur est
+          voluptatibus voluptatem. Quo temporibus quam qui assumenda cupiditate
+          vel placeat excepturi et tenetur rerum. Vel laborum alias et
+          consequatur aliquid ad impedit officiis? Vel debitis ipsam At ratione
+          quia et corporis autem aut dolore harum qui ipsum maxime 33 possimus
+          accusantium et dolor earum! Ea nihil consectetur et maxime labore nam
+          dolorem minus qui dolor eligendi et dolores odit! Et consequatur velit
+          eos similique ipsa est natus sint 33 ipsa error sed nihil porro id
+          praesentium modi. Et dignissimos tempora est debitis illum et maiores
+          voluptatibus ut natus rerum non dignissimos corrupti et maiores nihil
+          hic ducimus repellat. Sed natus optio ex temporibus voluptas ut porro
+          autem.
+        </p>
+        <h3 id="aboutme">As a person :</h3>
+        <p>
+          Lorem ipsum dolor sit amet. At quasi dolorem ut obcaecati alias hic
+          vitae tempora et reiciendis expedita et molestias nisi ut consequatur
+          quisquam. Eos dolor maiores ea rerum sint ea accusamus maxime sed
+          corrupti voluptas ad debitis eius ut repudiandae consequatur est
+          voluptatibus voluptatem. Quo temporibus quam qui assumenda cupiditate
+          vel placeat excepturi et tenetur rerum. Vel laborum alias et
+          consequatur aliquid ad impedit officiis? Vel debitis ipsam At ratione
+          quia et corporis autem aut dolore harum qui ipsum maxime 33 possimus
+          accusantium et dolor earum! Ea nihil consectetur et maxime labore nam
+          dolorem minus qui dolor eligendi et dolores odit! Et consequatur velit
+          eos similique ipsa est natus sint 33 ipsa error sed nihil porro id
+          praesentium modi. Et dignissimos tempora est debitis illum et maiores
+          voluptatibus ut natus rerum non dignissimos corrupti et maiores nihil
+          hic ducimus repellat. Sed natus optio ex temporibus voluptas ut porro
+          autem.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
