--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="nav">
       <input type="checkbox" id="nav-check" />
       <div class="nav-header">
-        <div class="nav-title">Ahmed Kerouat</div>
+        <div class="nav-title"><a href="index.html">Ahmed Kerouat</a></div>
       </div>
       <div class="nav-btn">
         <label for="nav-check">
