--- a/index.html
+++ b/index.html
@@ -21,9 +21,20 @@
         </label>
       </div>
       <div class="nav-links">
-        <a href="">Artwork.</a>
         <a href="">About me.</a>
-        <a href="">Contact.</a>
+        <a href="">Artwork.</a>
+        <a href="">Projects.</a>
+      </div>
+    </div>
+    <div class="mask-content">
+      <div class="image-container">
+        <img src="imgs/mask.png" alt="Mask Image" width="500" height="500" />
+      </div>
+      <div class="text-container">
+        <p class="image-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo
+          vel turpis interdum feugiat vel ut lorem. Fusce sed ultricies nisl.
+        </p>
       </div>
     </div>
   </body>
