add about me and change navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div class="nav">
       <input type="checkbox" id="nav-check" />
       <div class="nav-header">
-        <div class="nav-title"><a href="index.html">Ahmed Kerouat</a></div>
+        <div class="nav-title">
+          <a href="index.html">
+            <img src="imgs/masksketch.png" alt="Logo" width="60" height="70" />
+          </a>
+        </div>
       </div>
       <div class="nav-btn">
         <label for="nav-check">
@@ -26,16 +30,38 @@
         <a href="">Projects.</a>
       </div>
     </div>
-    <div class="mask-content">
-      <div class="image-container">
-        <img src="imgs/mask.png" alt="Mask Image" width="500" height="500" />
-      </div>
-      <div class="text-container">
-        <p class="image-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac justo
-          vel turpis interdum feugiat vel ut lorem. Fusce sed ultricies nisl.
-        </p>
-      </div>
+    <div class="black-hole"></div>
+    <div class="scroll-container">
+      <div class="scroll-content"></div>
     </div>
+    <section class="about-me">
+      <h2>About Me</h2>
+      <p class="intro-text">
+        I'm a 17-year-old with dreams and a passion for various aspects of life.
+        I find joy in art, coding, and leadership.
+      </p>
+      <p class="mask-text">
+        I like to represent myself using a gas mask. It's not just a symbol, but
+        a metaphor. Society can sometimes be toxic, and the mask reminds us that
+        anyone can identify with it. It's a symbol of unity, a reminder that
+        everybody can wear the mask.
+      </p>
+      <p class="philosophy-text">
+        In life, everything is about what you decide to do. I strive to give my
+        best in everything I pursue.
+      </p>
+    </section>
+    <section class="artwork">
+      <h2>Artwork</h2>
+      <div class="artwork-item">
+        <img src="artwork1.jpg" alt="Artwork 1" />
+        <p>Artwork description goes here.</p>
+      </div>
+      <div class="artwork-item">
+        <img src="artwork2.jpg" alt="Artwork 2" />
+        <p>Artwork description goes here.</p>
+      </div>
+    </section>
+    <script src="app.js"></script>
   </body>
 </html>
