--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <div class="background"></div>
     <img src="/imgs/tvOn.png" alt="TV" class="tv-image" />
+    <ul class="centered-text">
+      <li>About</li>
+      <li>Projects</li>
+      <li>Artwork</li>
+      <li>Contact</li>
+    </ul>
   </body>
 </html>
