smoother tv interaction

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="background"></div>
     <img src="/imgs/tvOn.png" alt="TV" class="tv-image" />
     <ul class="centered-text">
+      <img
+        src="/imgs/maskpixelart.png"
+        alt="Mask Pixel Art"
+        class="centered-image"
+      />
       <li>About</li>
       <li>Projects</li>
       <li>Artwork</li>
