--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div class="background"></div>
     <img src="/imgs/tvOn.png" alt="TV" class="tv-image" />
+    <div class="tv-shutdown"></div>
     <ul class="centered-text">
       <img
         src="/imgs/maskpixelart.png"
