prevent animation from playing again

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
   </head>
   <body>
     <div class="background"></div>
-    <img src="/imgs/tvOn.png" alt="TV" class="tv-image" />
-    <div class="tv-shutdown"></div>
+    <img
+      src="/imgs/tvOn.png"
+      id="tv-image"
+      alt="TV"
+      class="tv-image tv-animation"
+    />
+    <div id="shutdown-animation" class="tv-shutdown shutdown-animation"></div>
     <ul class="centered-text">
       <img
         src="/imgs/maskpixelart.png"
@@ -21,5 +26,6 @@
       <li>Artwork</li>
       <li>Contact</li>
     </ul>
+    <script src="index.js"></script>
   </body>
 </html>
