--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Ahmed Kerouat</title>
   </head>
   <body>
-    <div class="background"></div>
     <img
       src="/imgs/tvOn.png"
       id="tv-image"
@@ -26,6 +25,10 @@
       <li>Artwork</li>
       <li>Contact</li>
     </ul>
+    <div class="about-me">
+      <h2>About Me</h2>
+      <p>Welcome to my website!</p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
