--- a/index.html
+++ b/index.html
@@ -7,27 +7,36 @@
     <title>Ahmed Kerouat</title>
   </head>
   <body>
-    <img
-      src="/imgs/tvOn.png"
-      id="tv-image"
-      alt="TV"
-      class="tv-image tv-animation"
-    />
-    <div id="shutdown-animation" class="tv-shutdown shutdown-animation"></div>
-    <ul class="centered-text">
-      <img
-        src="/imgs/maskpixelart.png"
-        alt="Mask Pixel Art"
-        class="centered-image"
-      />
-      <li>About</li>
-      <li>Projects</li>
-      <li>Artwork</li>
-      <li>Contact</li>
-    </ul>
-    <div class="about-me">
-      <h2>About Me</h2>
-      <p>Welcome to my website!</p>
+    <div class="container">
+      <div class="TV-Section">
+        <img
+          src="/imgs/tvOn.png"
+          id="tv-image"
+          alt="TV"
+          class="tv-image tv-animation"
+        />
+        <div
+          id="shutdown-animation"
+          class="tv-shutdown shutdown-animation"
+        ></div>
+        <ul class="centered-text">
+          <img
+            src="/imgs/maskpixelart.png"
+            alt="Mask Pixel Art"
+            class="centered-image"
+          />
+          <li>About</li>
+          <li>Projects</li>
+          <li>Artwork</li>
+          <li>Contact</li>
+        </ul>
+      </div>
+      <div class="About-me">
+        <h2>About me:</h2>
+      </div>
+      <div class="Projects"></div>
+      <div class="Artwork"></div>
+      <div class="Contact"></div>
     </div>
     <script src="index.js"></script>
   </body>
