about me section

--- a/index.html
+++ b/index.html
@@ -33,8 +33,48 @@
       </div>
       <div class="About-me">
         <h2>About me:</h2>
+        <p>My name is Ahmed Kerouat.</p>
+        <p>I consider my self as an artist, a developer and a leader.</p>
+        <p>
+          Currently, I am a senior at Lycée Louis Pasteur Tunis, where I
+          specialize in Mathematics and Physics.
+        </p>
+        <p>
+          Outside of my academic endeavors, I indulge in various hobbies.
+          Skateboarding, drawing, and engaging in Valorant gaming sessions are
+          some of my favorite pastimes. My early creative journey revolved
+          around drawing, which I began at the age of 3 or 4, like all the other
+          kids. However, at the age of 10, I delved into Photoshop and 3D
+          softwares, marking the formal start of my digital creative journey.
+          Since then, I've undertaken numerous projects in these domains. At the
+          age of 13, I ventured into the world of coding, which has become a
+          persistent passion in my life.
+        </p>
+        <h3>Why a Gas Mask ?</h2>
+        <p>
+          In my artwork and on the Internet I like to depict myself using a gas
+          mask. Because it's not who I am that matters, it's the reflection of
+          my actions and my philosophy that hold a significance.
+        </p>
+        <p>
+          Our world grapples with numerous issues today, I harness the power of
+          art to criticize society and address these problems. In most of my
+          work, I aim to evoke strong emotions, intending to shock and, in turn,
+          inspire thoughts and actions. "Anyone can wear the mask" - Miles
+          Morales
+        </p>
       </div>
-      <div class="Projects"></div>
+      <div class="Gas-Cave">
+        <img src="imgs/bg.png" alt="gas-cave" />
+        <p>"The Gas Cave" (2021)</p>
+        <a>
+          Through the render of this 3D Scene I represented how I would see my
+          personal lair.
+        </a>
+      </div>
+      <div class="Projects">
+        <h2>Projects</h2>
+      </div>
       <div class="Artwork"></div>
       <div class="Contact"></div>
     </div>
