include the projects

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ahmed Kerouat</title>
   </head>
   <body>
-    <div class="container">
+    <div id="main-layout" class="container">
       <div class="TV-Section">
         <img
           src="/imgs/tvOn.png"
@@ -73,7 +73,30 @@
         </a>
       </div>
       <div class="Projects">
-        <h2>Projects</h2>
+        <h2>Notable Projects:</h2>
+        <p> During High school, I had the opportunity to work on multitude of coding projects. But here are the most notable ones, each of which likely took several months. </p>
+        <div class="centered-div">
+          <div class="right-div-elements right-div">
+        <h3>Somno Ignis (2022)</h3>
+        <img src="imgs/Somno-Ignis.png" alt="Somno Ignis Image"/>
+        <p> Some stuff to say</p>
+          </div>
+          <div class="left-div-elements left-div">
+        <h3>Atom Simulator (2022)</h3>
+        <img src="imgs/Atom-Simulator.png" alt="Atom Simulator Image"/>
+        <p> Some stuff to say</p>
+          </div>
+          <div class="right-div-elements right-div">
+        <h3>Flow Wizard (2023)</h3>
+        <img src="imgs/Flow-Wizard.jpg" alt="Flow Wizard Image"/>
+        <p> Some stuff to say</p>
+          </div>
+          <div class="left-div-elements left-div">
+        <h3>Galaxy Simulator (2023)</h3>
+        <img src="imgs/Galaxy-Simulator.jpg" alt="Galaxy Simulator Image"/>
+        <p> Some stuff to say</p>
+          </div>
+      </div>
       </div>
       <div class="Artwork"></div>
       <div class="Contact"></div>
