--- a/index.html
+++ b/index.html
@@ -78,22 +78,46 @@
         <div class="centered-div">
           <div class="right-div-elements right-div">
         <h3>Somno Ignis (2022)</h3>
-        <img src="imgs/Somno-Ignis.png" alt="Somno Ignis Image"/>
+        <a href="https://github.com/ahmedkerouat/Somno-Ignis" class="github-link" target="_blank">
+        <img src="imgs/Somno-Ignis.png" alt="Somno Ignis Image" class="project-image"/>
+        <span class="github-text">
+          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
+          View on GitHub
+        </span>
+        </a>
         <p> Some stuff to say</p>
           </div>
           <div class="left-div-elements left-div">
         <h3>Atom Simulator (2022)</h3>
-        <img src="imgs/Atom-Simulator.png" alt="Atom Simulator Image"/>
+        <a href="https://github.com/ahmedkerouat/Atom-Simulator" class="github-link" target="_blank">
+        <img src="imgs/Atom-Simulator.png" alt="Atom Simulator Image" class="project-image"/>
+        <span class="github-text">
+          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
+          View on GitHub
+        </span>
+      </a>
         <p> Some stuff to say</p>
           </div>
           <div class="right-div-elements right-div">
         <h3>Flow Wizard (2023)</h3>
-        <img src="imgs/Flow-Wizard.jpg" alt="Flow Wizard Image"/>
+        <a href="https://github.com/ahmedkerouat/Flow-Wizard" class="github-link" target="_blank">
+        <img src="imgs/Flow-Wizard.jpg" alt="Flow Wizard Image" class="project-image"/>
+        <span class="github-text">
+          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
+          View on GitHub
+        </span>
+      </a>
         <p> Some stuff to say</p>
           </div>
           <div class="left-div-elements left-div">
         <h3>Galaxy Simulator (2023)</h3>
-        <img src="imgs/Galaxy-Simulator.jpg" alt="Galaxy Simulator Image"/>
+        <a href="https://github.com/ahmedkerouat/galaxySimulator" class="github-link" target="_blank">
+        <img src="imgs/Galaxy-Simulator.jpg" alt="Galaxy Simulator Image" class="project-image"/>
+        <span class="github-text">
+          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
+          View on GitHub
+        </span>
+      </a>
         <p> Some stuff to say</p>
           </div>
       </div>
