improve layout and add description

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           age of 13, I ventured into the world of coding, which has become a
           persistent passion in my life.
         </p>
-        <h3>Why a Gas Mask ?</h2>
+        <h3>Why a Gas Mask ?</h3>
         <p>
           In my artwork and on the Internet I like to depict myself using a gas
           mask. Because it's not who I am that matters, it's the reflection of
@@ -74,53 +74,123 @@
       </div>
       <div class="Projects">
         <h2>Notable Projects:</h2>
-        <p> During High school, I had the opportunity to work on multitude of coding projects. But here are the most notable ones, each of which likely took several months. </p>
+        <p>
+          During High school, I had the opportunity to work on multitude of
+          coding projects. But here are the most notable ones, each of which
+          likely took several months.
+        </p>
         <div class="centered-div">
           <div class="right-div-elements right-div">
-        <h3>Somno Ignis (2022)</h3>
-        <a href="https://github.com/ahmedkerouat/Somno-Ignis" class="github-link" target="_blank">
-        <img src="imgs/Somno-Ignis.png" alt="Somno Ignis Image" class="project-image"/>
-        <span class="github-text">
-          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
-          View on GitHub
-        </span>
-        </a>
-        <p> Some stuff to say</p>
+            <h3>Somno Ignis (2022)</h3>
+            <a
+              href="https://github.com/ahmedkerouat/Somno-Ignis"
+              class="github-link"
+              target="_blank"
+            >
+              <img
+                src="imgs/Somno-Ignis.png"
+                alt="Somno Ignis Image"
+                class="project-image"
+              />
+              <span class="github-text">
+                <img
+                  src="imgs/github-logo.png"
+                  alt="GitHub Logo"
+                  class="github-logo"
+                />
+                View on GitHub
+              </span>
+            </a>
+            <p class="description">
+              Inspired by a mini-game in Minecraft called BedWars, where the
+              goal is to defend your bed against an enemy team, in this video
+              game I coded in Python using the Pygame library, you incarnate a
+              fire spirit that defends its bed against a horde of monsters that
+              won't let it rest and get sleep.
+            </p>
           </div>
           <div class="left-div-elements left-div">
-        <h3>Atom Simulator (2022)</h3>
-        <a href="https://github.com/ahmedkerouat/Atom-Simulator" class="github-link" target="_blank">
-        <img src="imgs/Atom-Simulator.png" alt="Atom Simulator Image" class="project-image"/>
-        <span class="github-text">
-          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
-          View on GitHub
-        </span>
-      </a>
-        <p> Some stuff to say</p>
+            <h3>Atom Simulator (2022)</h3>
+            <a
+              href="https://github.com/ahmedkerouat/Atom-Simulator"
+              class="github-link"
+              target="_blank"
+            >
+              <img
+                src="imgs/Atom-Simulator.png"
+                alt="Atom Simulator Image"
+                class="project-image"
+              />
+              <span class="github-text">
+                <img
+                  src="imgs/github-logo.png"
+                  alt="GitHub Logo"
+                  class="github-logo"
+                />
+                View on GitHub
+              </span>
+            </a>
+            <p class="description">
+              This project utilizes a sophisticated sphere packing technique to
+              simulate all 118 elements based on the Bohr Model. It provides
+              detailed electron configuration information generated in the code
+              for rendering and allows you to manipulate atom stability.
+              Additionally, it features a camera for enhanced interaction.
+            </p>
           </div>
           <div class="right-div-elements right-div">
-        <h3>Flow Wizard (2023)</h3>
-        <a href="https://github.com/ahmedkerouat/Flow-Wizard" class="github-link" target="_blank">
-        <img src="imgs/Flow-Wizard.jpg" alt="Flow Wizard Image" class="project-image"/>
-        <span class="github-text">
-          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
-          View on GitHub
-        </span>
-      </a>
-        <p> Some stuff to say</p>
+            <h3>Flow Wizard (2023)</h3>
+            <a
+              href="https://github.com/ahmedkerouat/Flow-Wizard"
+              class="github-link"
+              target="_blank"
+            >
+              <img
+                src="imgs/Flow-Wizard.jpg"
+                alt="Flow Wizard Image"
+                class="project-image"
+              />
+              <span class="github-text">
+                <img
+                  src="imgs/github-logo.png"
+                  alt="GitHub Logo"
+                  class="github-logo"
+                />
+                View on GitHub
+              </span>
+            </a>
+            <p class="description">
+              Powered by the Qt framework, this cross-platform app is designed
+              to boost your productivity and streamline your daily routine. You
+              have access to 250 motivational quotes, a notepad, a habit
+              tracker, and a goal tracker. Data is kept completely private,
+              stored locally on the device.
+            </p>
           </div>
           <div class="left-div-elements left-div">
-        <h3>Galaxy Simulator (2023)</h3>
-        <a href="https://github.com/ahmedkerouat/galaxySimulator" class="github-link" target="_blank">
-        <img src="imgs/Galaxy-Simulator.jpg" alt="Galaxy Simulator Image" class="project-image"/>
-        <span class="github-text">
-          <img src="imgs/github-logo.png" alt="GitHub Logo" class="github-logo"/>
-          View on GitHub
-        </span>
-      </a>
-        <p> Some stuff to say</p>
+            <h3>Galaxy Simulator (2023)</h3>
+            <a
+              href="https://github.com/ahmedkerouat/galaxySimulator"
+              class="github-link"
+              target="_blank"
+            >
+              <img
+                src="imgs/Galaxy-Simulator.jpg"
+                alt="Galaxy Simulator Image"
+                class="project-image"
+              />
+              <span class="github-text">
+                <img
+                  src="imgs/github-logo.png"
+                  alt="GitHub Logo"
+                  class="github-logo"
+                />
+                View on GitHub
+              </span>
+            </a>
+            <p class="description">Some stuff to say</p>
           </div>
-      </div>
+        </div>
       </div>
       <div class="Artwork"></div>
       <div class="Contact"></div>
