simple on scroll animation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li>Contact</li>
         </ul>
       </div>
-      <div class="About-me">
+      <div class="About-me hidden">
         <h2>About me:</h2>
         <p>My name is Ahmed Kerouat.</p>
         <p>I consider my self as an artist, a developer and a leader.</p>
@@ -64,7 +64,7 @@
           Morales
         </p>
       </div>
-      <div class="Gas-Cave">
+      <div class="Gas-Cave hidden">
         <img src="imgs/bg.png" alt="gas-cave" />
         <p>"The Gas Cave" (2021)</p>
         <a>
@@ -72,7 +72,7 @@
           personal lair.
         </a>
       </div>
-      <div class="Projects">
+      <div class="Projects hidden">
         <h2>Notable Projects:</h2>
         <p>
           During High school, I had the opportunity to work on multitude of
