--- a/index.html
+++ b/index.html
@@ -192,7 +192,124 @@
           </div>
         </div>
       </div>
-      <div class="Artwork"></div>
+      <div class="Artwork">
+        <h2>Artwork:</h2>
+        <p>
+          Throughout my time in high school and middle school, I had the
+          opportunity to create a significant amount of artwork.
+        </p>
+        <p>
+          Some of these projects were commissioned and paid, while others were
+          personal endeavors. Below, I offer a glimpse of my artistic
+          progression over the past few years (2020-2023).
+        </p>
+        <div class="gallery">
+          <div class="col-grid">
+            <img
+              src="imgs/artwork/0.jpg"
+              data-title="❝Farewell, My Friend❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/3.jpg"
+              data-title="❝A Beacon of Injustice❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/2.jpg"
+              data-title="❝Conundrum : Coexistence❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/10.jpg"
+              data-title="❝The Knight's Journey : Shattered Reflection❞ (2023)"
+            />
+          </div>
+          <div class="col-grid">
+            <img
+              src="imgs/artwork/5.jpg"
+              data-title="❝The Knight's Journey : Becoming Who You Are❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/4.jpg"
+              data-title="❝Too Hard to Stop Drinking Bleach❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/6.jpg"
+              data-title="❝Across the Spider-Verse❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/1.jpg"
+              data-title="❝How I Met the Monster❞ (2023)"
+            />
+          </div>
+          <div class="col-grid">
+            <img
+              src="imgs/artwork/7.jpg"
+              data-title="❝The Knight's Journey : Conquering Your Monster❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/9.jpg"
+              data-title="❝Enslaved by The Monster❞ (2023)"
+            />
+            <img src="imgs/artwork/8.png" data-title="❝Remoteness❞ (2023)" />
+            <img
+              src="imgs/artwork/11.jpg"
+              data-title="❝Schrödinger's cat❞ (2023)"
+            />
+          </div>
+          <div class="col-grid">
+            <img
+              src="imgs/artwork/12.jpg"
+              data-title="❝The Purpose Game❞ (2023)"
+            />
+            <img
+              src="imgs/artwork/13.jpg"
+              data-title="❝Lost Knowledge❞ (2022)"
+            />
+            <img src="imgs/artwork/19.png" data-title="❝Clutter❞ (2022)" />
+            <img src="imgs/artwork/14.png" data-title="❝Mom❞ (2022)" />
+          </div>
+          <div class="col-grid">
+            <img src="imgs/artwork/16.png" data-title="❝My planet❞ (2022)" />
+            <img
+              src="imgs/artwork/15.jpg"
+              data-title="❝If unicorns were real..❞ (2022)"
+            />
+            <img src="imgs/artwork/18.png" data-title="❝Teddy Bear❞ (2022)" />
+            <img
+              src="imgs/artwork/20-1.png"
+              data-title="❝The Knight Beneath the Moon❞ (2022)"
+            />
+          </div>
+          <div class="col-grid">
+            <img
+              src="imgs/artwork/20-2.png"
+              data-title="❝Amidst the Masses❞ (2022)"
+            />
+            <img src="imgs/artwork/20.png" data-title="❝The Explorer❞ (2021)" />
+            <img src="imgs/artwork/21.png" data-title="Untitled (2021)" />
+            <img src="imgs/artwork/22.png" data-title="❝Pain cat❞ (2021)" />
+          </div>
+          <div class="col-grid">
+            <img src="imgs/artwork/23.png" data-title="❝Bowling❞ (2021)" />
+            <img src="imgs/artwork/24.png" data-title="❝Squirtle❞ (2021)" />
+            <img src="imgs/artwork/25.png" data-title="❝Skateboard❞ (2021)" />
+          </div>
+          <div class="col-grid">
+            <img src="imgs/artwork/27.png" data-title="Untitled (2021)" />
+            <img src="imgs/artwork/29.png" data-title="Untitled (2021)" />
+            <img
+              src="imgs/artwork/30.jpg"
+              data-title="❝The Serpent Devouring Your Soul❞ (2020)"
+            />
+            <img src="imgs/artwork/26.png" data-title="Untitled (2021)" />
+          </div>
+        </div>
+        <div class="modal" id="imageModal">
+          <button class="cross" onclick="closeModal()">&#x2716;</button>
+          <img class="modal-content" id="zoomedImage" />
+          <h2 id="imageTitle"></h2>
+          <p id="imageDate"></p>
+        </div>
+      </div>
       <div class="Contact"></div>
     </div>
     <script src="index.js"></script>
